@@ -45,6 +45,9 @@ DEFAULTS = {
     'MEDIA_PATH': 'cms/',
     'PAGE_MEDIA_PATH': 'cms_page_media/',
     'TITLE_CHARACTER': '+',
+    'PAGE_CACHE': True,
+    'PLACEHOLDER_CACHE': True,
+    'PLUGIN_CACHE': True,
     'CACHE_PREFIX': 'cms-',
     'PLUGIN_PROCESSORS': [],
     'PLUGIN_CONTEXT_PROCESSORS': [],
